--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <h2 hidden class="features-title visually-hidden">List of features</h2>
                         <ul class="list list-features">
                             <li class="features-item-strategy">
-                                <div class="icon-1"></div>
+                                <div class="icon-1-container"></div>
                                 <h3 class="features-title">Strategy</h3>
                                 <p class="features-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                                 </p>
