--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
                         <ul class="list list-features">
                             <li class="features-item-strategy">
                                 <div class="container icon-1">
-                                    <svg class="icon-antenna-1"></svg>
+                                    <svg class="icon-antenna-1">
+                                        <use href="./images/icon.svg#antenna-1.svg">
+
+                                        </use>
+                                    </svg>
                                 </div>
                                 <h3 class="features-title">Strategy</h3>
                                 <p class="features-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
