--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <ul class="list list-features">
                             <li class="features-item-strategy">
                                 <div class="container icon-1">
-                                    <svg class="icon-antenna-1">
+                                    <svg class="icon-antenna-1" width="64"  height="64">
                                         <use href="./images/icon.svg#antenna-1.svg">
 
                                         </use>
