--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
                         <h2 hidden class="features-title visually-hidden">List of features</h2>
                         <ul class="list list-features">
                             <li class="features-item-strategy">
-                                <div class="container icon-1">
-                                    <svg class="icon-antenna-1" width="64"  height="64">
-                                        <use href="./images/icon.svg#antenna-1.svg">
-
-                                        </use>
+                                <div class="icon-1-container">
+                                    <svg class="icon-antenna-1" width="64" height="64">
+                                        <use href="./images/icon.svg#antenna-1.svg"></use>
                                     </svg>
                                 </div>
                                 <h3 class="features-title">Strategy</h3>
