--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                         <ul class="list list-features">
                             <li class="features-item-strategy">
                                 <div class="icon-container">
-                                    <svg class="icon-antenna" width="64" height="64">
-                                        <use href="./images/icon.svg#antenna.svg"></use>
+                                    <svg width="64" height="64">
+                                        <use href="./images/icon.svg#icon-antenna.svg"></use>
                                     </svg>
                                 </div>
                                 <h3 class="features-title">Strategy</h3>
