--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
 <ul class="list project-card-list">
  
     <li class="project-card-item">
-        <a class="link" href="">
+        <a class="link project-card-link" href="">
             <img class="project-card-img" 
                 src="./images/portfolio/row-1/img-1.jpg" 
                 alt="Banking App Interface Concept"
