project-card-item:

--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
         
     <!-- Row 1 - Project Card 2  -->
     <li class="project-card-item">
-        <a class="link" href="">
+        <a class="link project-card-link" href="">
             <img class="project-card-img" 
                 src="./images/portfolio/row-1/img-2.jpg"
                 alt="Cashless Payment"
@@ -120,7 +120,7 @@
 
     <!-- Row 1 - Project Card 3   -->
     <li class="project-card-item">
-        <a class="link" href="">       
+        <a class="link project-card-link" href="">       
             <img class="project-card-img" 
                 src="./images/portfolio/row-1/img-3.jpg" 
                 alt="Meditation App"
@@ -136,7 +136,7 @@
 
     <!-- Row 2 - Project Card 1  -->    
     <li class="project-card-item">
-        <a class="link" href="">   
+        <a class="link project-card-link" href="">   
             <img class="project-card-img" 
                 src="./images/portfolio/row-2/img-1.jpg" 
                 alt="Taxi Service"
@@ -152,7 +152,7 @@
 
     <!-- Row 2 - Project Card 2  -->
     <li class="project-card-item">
-        <a class="link" href=""> 
+        <a class="link project-card-link" href=""> 
             <img class="project-card-img" 
                 src="./images/portfolio/row-2/img-2.jpg"
                 alt="Screen Illustrations"
@@ -168,7 +168,7 @@
 
     <!-- Row 2 - Project Card 3  -->
     <li class="project-card-item">
-        <a class="link" href=""> 
+        <a class="link project-card-link" href=""> 
             <img class="project-card-img" 
                 src="./images/portfolio/row-2/img-3.jpg" 
                 alt="Online Courses"
@@ -184,7 +184,7 @@
 
     <!-- Row 3 - Project Card 1 -->    
     <li class="project-card-item">
-        <a class="link" href=""> 
+        <a class="link project-card-link" href=""> 
             <img class="project-card-img" 
                 src="./images/portfolio/row-3/img-1.jpg"
                 alt="Instagram Stories Concept"
@@ -200,7 +200,7 @@
 
     <!-- Row 3 - Project Card 2 -->      
     <li class="project-card-item">
-        <a class="link" href=""> 
+        <a class="link project-card-link" href=""> 
             <img class="project-card-img" 
                 src="./images/portfolio/row-3/img-2.jpg"
                 alt="Organic Food"
@@ -216,7 +216,7 @@
 
     <!-- Row 3 - Project Card 3 -->   
     <li class="project-card-item">
-        <a class="link" href=""> 
+        <a class="link project-card-link" href=""> 
             <img class="project-card-img" 
                 src="./images/portfolio/row-3/img-3.jpg"
                 alt="Fresh Coffee"
