--- a/index.html
+++ b/index.html
@@ -155,6 +155,61 @@
                             <div class="item-name-team">
                                 <h3 class="name-team">Mark Guerrero</h3>
                                 <p class="specialist-team">Product Designer</p>
+
+                                <ul class="socials list">
+                                    <li class="socials-item">
+                                        <a class="socials-link link"                                         
+                                            href="" 
+                                            target="_blank" 
+                                            rel="noopener noreferrer"
+                                            aria-label="instagram icon"
+                                            >
+                                        </a>
+                                        <svg class="socials-icon" width="12" height="12">
+                                            <use href="./images/icon.svg#icon-instagram"></use>
+                                        </svg>
+                                    </li>
+
+                                    <li class="socials-item">
+                                        <a class="socials-link link"
+                                            href="" 
+                                            target="_blank" 
+                                            rel="noopener noreferrer" 
+                                            aria-label="twitter icon"
+                                         >
+                                        </a>
+                                        <svg class="socials-icon" width="12" height="12">
+                                            <use href="./images/icon.svg#icon-twitter"></use>
+                                        </svg>
+                                    </li>
+
+                                    <li class="socials-item">
+                                        <a class="socials-link link" 
+                                            href="" 
+                                            target="_blank" 
+                                            rel="noopener noreferrer" 
+                                            aria-label="facebook icon"
+                                        >
+                                        </a>
+                                        <svg class="socials-icon" width="12" height="12">
+                                            <use href="./images/icon.svg#icon-facebook"></use>
+                                        </svg>
+                                    </li>
+
+                                    <li class="socials-item">
+                                        <a class="socials-link link" 
+                                            href="" 
+                                            target="_blank" 
+                                            rel="noopener noreferrer" 
+                                            aria-label="linkedin icon"
+                                        >
+                                        </a>
+                                        <svg class="socials-icon" width="12" height="12">
+                                            <use href="./images/icon.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </li>
+                                </ul>
+
                             </div>
                         </li>
                         
