--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             </section>
 
 
-            <!-- section 2-->
-        
+            <!-- features section 2-->        
                 <section class="features">
                     <div class="container container-features-title">
                         <h2 hidden class="features-title visually-hidden">List of features</h2>
@@ -75,7 +74,7 @@
                             <li class="features-item-strategy">
                                 <div class="icon-container">
                                     <svg width="64" height="64">
-                                        <use href="./images/icon.svg#icon-antenna.svg"></use>
+                                        <use href="./images/icon.svg#icon-antenna"></use>
                                     </svg>
                                 </div>
                                 <h3 class="features-title">Strategy</h3>
@@ -105,7 +104,7 @@
                 </section>
 
 
-            <!-- section 3-->
+            <!-- doing section 3-->
                 <section class="doing-section">
                     <div class="container">
                         <h2 class="doing-title">What are we doing</h2>
@@ -140,7 +139,7 @@
                     </div>  
                 </section>
 
-<!-- section 4-->
+<!-- team section 4-->
             <section class="team">
                 <div class="container">
                     <h2 class="title-team">Our Team</h2>
@@ -225,7 +224,7 @@
                                 <ul class="socials list">
                                     <li class="socials-item">
                                         <a class="socials-link link" 
-                                            href="" 
+                                            href="" `
                                             target="_blank" 
                                             rel="noopener noreferrer" 
                                             aria-label="instagram icon"
