--- a/index.html
+++ b/index.html
@@ -83,18 +83,33 @@
                             </li>
                         
                             <li class="features-item-strategy">
+                                <div class="icon-container">
+                                    <svg width="64" height="64">
+                                        <use href="./images/icon.svg#icon-clock"></use>
+                                    </svg>
+                                </div>
                                 <h3 class="features-title">Punctuality</h3>
                                 <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.
                                 </p>                        
                             </li>
 
-                            <li class="features-item-strategy">
+                            <li class="features-item-strategy">                                
+                                <div class="icon-container">
+                                    <svg width="64" height="64">
+                                        <use href="./images/icon.svg#icon-diagram"></use>
+                                    </svg>
+                                </div>                                
                                 <h3 class="features-title">Diligence</h3>
                                 <p class="features-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                                 </p>
                             </li>
                         
                             <li class="features-item-strategy">
+                                <div class="icon-container">
+                                    <svg width="64" height="64">
+                                        <use href="./images/icon.svg#icon-astronaut"></use>
+                                    </svg>
+                                </div>
                                 <h3 class="features-title">Technologies</h3>
                                 <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                                 </p>
