--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                 <ul class="socials list">
                                     <li class="socials-item">
                                         <a class="socials-link link" 
-                                            href="" `
+                                            href="" 
                                             target="_blank" 
                                             rel="noopener noreferrer" 
                                             aria-label="instagram icon"
