--- a/index.html
+++ b/index.html
@@ -430,6 +430,9 @@
            </section>
 
 
+           <!-- customers section 5 -->
+        
+
         </main>
 
         <!-- footer section -->
