--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
             <div class="container container-customers">
                 <h2 class="title-container">Customers</h2>   
                         
-                    <ul class="clients list">
+                    <ul class="list clients-list">
                         <li class="clients-container">
-                            <svg class="clients-icon" width="168" height="88">
+                            <svg class="clients-icon" width="" height="">
                                 <use href="./images/icon.svg#client-icon-logo-one"></use>
                             </svg>                            
                         </li>
