--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
                         
                     <ul class="list clients-list">
                         <li class="clients-container">
+                            <a href=""></a>
                             <svg class="clients-icon" width="" height="">
                                 <use href="./images/icon.svg#client-icon-logo-one"></use>
                             </svg>                            
