--- a/index.html
+++ b/index.html
@@ -437,10 +437,11 @@
                         
                     <ul class="list clients-list">
                         <li class="clients-container">
-                            <a class="clients-link " href=""></a>
-                            <svg class="clients-icon" width="" height="">
-                                <use href="./images/icon.svg#client-icon-logo-one"></use>
-                            </svg>                            
+                            <a class="clients-link " href="">
+                                <svg class="clients-icon" width="" height="">
+                                    <use href="./images/icon.svg#client-icon-logo-one"></use>
+                                </svg> 
+                            </a>
                         </li>
                                   
                         <li class="clients-container">
