--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                         
                     <ul class="list clients-list">
                         <li class="clients-container">
-                            <a class="clients-link " href="">
+                            <a class="clients-link link" href="">
                                 <svg class="clients-icon" width="" height="">
                                     <use href="./images/icon.svg#client-icon-logo-one"></use>
                                 </svg> 
