--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 
 
            <!-- customers section 5 -->
-        <section class="customers">
+        <section class="customers-section section">
             <div class="container container-customers">
                 <h2 class="title-container">Customers</h2>   
                         
