--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                     <ul class="list clients-list">
                         <li class="clients-container">
                             <a class="clients-link link" href="">
-                                <svg class="clients-icon" width="" height="">
+                                <svg class="clients-icon" width="104" height="56">
                                     <use href="./images/icon.svg#client-icon-logo-one"></use>
                                 </svg> 
                             </a>
