--- a/index.html
+++ b/index.html
@@ -492,12 +492,53 @@
 
         <!-- footer section -->
         <footer class="footer-section">
-            <div class="container">
-
-                <a href="./index.html" class="link footer-logo">Web<span class="footer-logo-studio">Studio</span>
-                </a>
-                                    <p class="footer-section-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            <div class="container footer-container">
+                <div>
+                    <a href="./index.html" class="link footer-logo">Web<span class="footer-logo-studio">Studio</span>
+                    </a>
+                    <p class="footer-section-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                     </p>
+                </div>
+
+                <div>
+                    <h3 class="name-team">Social media</h3>
+                   
+                    <ul class="socials list">
+                        <li class="socials-item">
+                            <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
+                                <svg class="socials-icon" width="16" height="16">
+                                    <use href="./images/icon.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+
+                        <li class="socials-item">
+                            <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
+                                <svg class="socials-icon" width="16" height="16">
+                                    <use href="./images/icon.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+
+                        <li class="socials-item">
+                            <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
+                                <svg class="socials-icon" width="16" height="16">
+                                    <use href="./images/icon.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+
+                        <li class="socials-item">
+                            <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
+                                <svg class="socials-icon" width="16" height="16">
+                                    <use href="./images/icon.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>                                 
+
+                    </ul>
+                </div>
+
             </div>
         </footer>
 
