--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 </div>
 
                 <div>
-                    <h3 class="name-team">Social media</h3>
+                    <h3 class="footer-social-team">Social media</h3>
                    
                     <ul class="socials list">
                         <li class="socials-item">
