--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                     </p>
                 </div>
 
-                <div>
+                <div class="footer-icon-container">
                     <p class="footer-social-team">Social media</p>
                    
                     <ul class="socials list">
