--- a/index.html
+++ b/index.html
@@ -505,32 +505,32 @@
                    
                     <ul class="socials list">
                         <li class="socials-item">
-                            <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
-                                <svg class="socials-icon" width="16" height="16">
+                            <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
+                                <svg class="footer-socials-icon" width="16" height="16">
                                     <use href="./images/icon.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
 
                         <li class="socials-item">
-                            <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
-                                <svg class="socials-icon" width="16" height="16">
+                            <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
+                                <svg class="footer-socials-icon" width="16" height="16">
                                     <use href="./images/icon.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
 
                         <li class="socials-item">
-                            <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
-                                <svg class="socials-icon" width="16" height="16">
+                            <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
+                                <svg class="footer-socials-icon" width="16" height="16">
                                     <use href="./images/icon.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
 
                         <li class="socials-item">
-                            <a class="socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
-                                <svg class="socials-icon" width="16" height="16">
+                            <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
+                                <svg class="footer-socials-icon" width="16" height="16">
                                     <use href="./images/icon.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
