--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         <!-- footer section -->
         <footer class="footer-section">
             <div class="container footer-container">
-                <div>
+                <div class="footer-logo-container">
                     <a href="./index.html" class="link footer-logo">Web<span class="footer-logo-studio">Studio</span>
                     </a>
                     <p class="footer-section-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
