--- a/index.html
+++ b/index.html
@@ -503,10 +503,10 @@
                 <div class="footer-icon-container">
                     <p class="footer-social-team">Social media</p>
                    
-                    <ul class="socials list">
+                    <ul class="footer-socials list">
                         <li class="socials-item">
                             <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
-                                <svg class="footer-socials-icon" width="16" height="16">
+                                <svg class="footer-socials-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-instagram"></use>
                                 </svg>
                             </a>
@@ -514,7 +514,7 @@
 
                         <li class="socials-item">
                             <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
-                                <svg class="footer-socials-icon" width="16" height="16">
+                                <svg class="footer-socials-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-twitter"></use>
                                 </svg>
                             </a>
@@ -522,7 +522,7 @@
 
                         <li class="socials-item">
                             <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
-                                <svg class="footer-socials-icon" width="16" height="16">
+                                <svg class="footer-socials-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-facebook"></use>
                                 </svg>
                             </a>
@@ -530,7 +530,7 @@
 
                         <li class="socials-item">
                             <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
-                                <svg class="footer-socials-icon" width="16" height="16">
+                                <svg class="footer-socials-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
