--- a/portfolio.html
+++ b/portfolio.html
@@ -238,15 +238,61 @@
 
 <!-- footer section -->
 <footer class="footer-section">
-    <div class="container">
+    <div class="container footer-container">
+        <div class="footer-logo-container">
+            <a href="./index.html" class="link footer-logo">Web<span class="footer-logo-studio">Studio</span>
+            </a>
+            <p class="footer-section-text">Increase the flow of customers and sales for your business with digital
+                marketing & growth solutions.
+            </p>
+        </div>
 
-        <a href="./index.html" class="link footer-logo">Web<span class="footer-logo-studio">Studio</span>
-        </a>
-        <p class="footer-section-text">Increase the flow of customers and sales for your business with digital marketing
-            & growth solutions.
-        </p>
+        <div class="footer-icon-container">
+            <p class="footer-social-team">Social media</p>
+
+            <ul class="footer-socials list">
+                <li class="socials-item">
+                    <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer"
+                        aria-label="instagram icon">
+                        <svg class="footer-socials-icon" width="24" height="24">
+                            <use href="./images/icon.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="socials-item">
+                    <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer"
+                        aria-label="instagram icon">
+                        <svg class="footer-socials-icon" width="24" height="24">
+                            <use href="./images/icon.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="socials-item">
+                    <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer"
+                        aria-label="instagram icon">
+                        <svg class="footer-socials-icon" width="24" height="24">
+                            <use href="./images/icon.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="socials-item">
+                    <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer"
+                        aria-label="instagram icon">
+                        <svg class="footer-socials-icon" width="24" height="24">
+                            <use href="./images/icon.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+
     </div>
 </footer>
+
 
 </body>
 </html>
