--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                     <p class="footer-social-team">Social media</p>
                    
                     <ul class="footer-socials list">
-                        <li class="socials-item">
+                        <li class="footer-socials-item">
                             <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
                                 <svg class="footer-socials-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-instagram"></use>
@@ -512,7 +512,7 @@
                             </a>
                         </li>
 
-                        <li class="socials-item">
+                        <li class="footer-socials-item">
                             <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
                                 <svg class="footer-socials-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-twitter"></use>
@@ -520,7 +520,7 @@
                             </a>
                         </li>
 
-                        <li class="socials-item">
+                        <li class="footer-socials-item">
                             <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
                                 <svg class="footer-socials-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-facebook"></use>
@@ -528,7 +528,7 @@
                             </a>
                         </li>
 
-                        <li class="socials-item">
+                        <li class="footer-socials-item">
                             <a class="footer-socials-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
                                 <svg class="footer-socials-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-linkedin"></use>
